--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.nav {
+#nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.nav ul {
+#nav ul {
     list-style-type: none;
 }
 
-.nav ul li {
+#nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
