--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,19 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 span {
+header h1 span {
     color: #d9dcd6;
 }
 
@@ -84,25 +84,7 @@ p {
     max-height: 200px;
 }
 
-.seo {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.orm {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.smm {
+.content .block {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -139,13 +121,13 @@ p {
     max-width: 150px;
 }
 
-.footer {
+footer {
+    text-align: center;
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
